--- a/main.yml
+++ b/main.yml
@@ -2,6 +2,7 @@
 - name: main.yml
   hosts: database_servers
   become_user: "{{ postgres_user }}"
+  become: true
   gather_facts: true
   roles:
     - postgres
