--- a/main.yml
+++ b/main.yml
@@ -3,6 +3,6 @@
   hosts: database_servers
   become_user: "{{ postgres_user }}"
   become: true
-  gather_facts: true
+  gather_facts: false
   roles:
     - postgres
