--- a/roles/tomcat/tasks/main.yml
+++ b/roles/tomcat/tasks/main.yml
@@ -3,7 +3,7 @@
 - name: Install Tomcat package(s)
   package:
     name: "{{ app_server_packages }}"
-    state: prese
+    state: present
 - name: Enable Tomcat at boot
   service:
     name: tomcat
