--- a/main.yml
+++ b/main.yml
@@ -23,3 +23,21 @@
     - haproxy
   tags:
     - load_balancers
+    
+- name: End to end smoke tests
+  hosts: app_servers:database_servers
+  gather_facts: true
+  become: true
+  tags:
+    - smoketest
+  roles:
+    - smoke_test
+
+- name: End to end smoke tests
+  hosts: app_servers
+  become: false
+  gather_facts: false
+  tags:
+    - smoketest
+  roles:
+    - smoke_test_app
