--- a/main.yml
+++ b/main.yml
@@ -1,13 +1,30 @@
 ---
+- import_playbook: in-memory-inventory.yml
+  tags:
+    - inventory
+    - must
+
+- name: Deploy Common repos
+  hosts: apps:frontends:appdbs
+  gather_facts: false
+  become: true
+  tags:
+    - common
+  tasks:
+    - name: Copy repo file
+      copy:
+        src: ./files/open_three-tier-app.repo
+        dest: /etc/yum.repos.d/open_three-tier-app.repo
+
 - name: Install postgres
-  hosts: database_servers
+  hosts: appdbs
   become: true
   gather_facts: false
   roles:
     - postgres
 
 - name: Deploy app tier
-  hosts: app_servers
+  hosts: apps
   gather_facts: false
   become: true
   tags:
@@ -16,7 +33,7 @@
     - tomcat
 
 - name: Deploy HAProxy load balancer
-  hosts: load_balancers
+  hosts: frontends
   gather_facts: false 
   become: true
   tags:
@@ -25,7 +42,7 @@
     - haproxy
   
 - name: End to end smoke tests
-  hosts: app_servers:database_servers
+  hosts: apps:appdbs
   gather_facts: true
   become: true
   tags:
@@ -34,7 +51,7 @@
     - smoke_test
 
 - name: End to end smoke tests
-  hosts: app_servers
+  hosts: apps
   become: false
   gather_facts: false
   tags:
