updated the hostgroups in the ansible-3-tier smoketest tasks main

--- a/roles/smoke_test/tasks/main.yml
+++ b/roles/smoke_test/tasks/main.yml
@@ -2,17 +2,17 @@
 # tasks file for smoke_test
 - debug:
     msg: 
-      - "IP is {{ hostvars['appdb1']['ansible_default_ipv4']['address'] }}"
-      - "First App server  {{ groups.app_servers[0] }}" 
+      - "IP is {{ hostvars['appdbs']['ansible_default_ipv4']['address'] }}"
+      - "First App server  {{ groups.apps[0] }}" 
     verbosity: 2        
 - name: Smoketest Postgres database
   postgresql_ping:
     db: flask_db
-    login_host: "{{ hostvars['appdb1']['ansible_default_ipv4']['address'] }}"
+    login_host: "{{ hostvars['appdbs']['ansible_default_ipv4']['address'] }}"
     login_user: flask
     login_password: redhat
     ssl_mode: disable
-  delegate_to: "{{ groups.app_servers[0] }}"
+  delegate_to: "{{ groups.apps[0] }}"
   run_once: true
   tags:
     - smoketest
