--- a/roles/smoke_test/tasks/main.yml
+++ b/roles/smoke_test/tasks/main.yml
@@ -3,7 +3,7 @@
 - debug:
     msg: 
       - "IP is {{ hostvars['appdbs']['ansible_default_ipv4']['address'] }}"
-      - "First App server  {{ groups.apps[0] }}" 
+      - "First App server  {{ groups.appdbs[0] }}" 
     verbosity: 2        
 - name: Smoketest Postgres database
   postgresql_ping:
@@ -12,7 +12,7 @@
     login_user: flask
     login_password: redhat
     ssl_mode: disable
-  delegate_to: "{{ groups.apps[0] }}"
+  delegate_to: "{{ groups.appdbs[0] }}"
   run_once: true
   tags:
     - smoketest
